exports[`Button  "a" matches snapshots 1`] = `
<a
  className="button"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`Button  "button" matches snapshot 1`] = `
<button
  className="button"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`Button  disabled matches snapshots 1`] = `
<a
  className="button"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAux  "a" matches snapshots 1`] = `
<a
  className="button-aux"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAux  "button" matches snapshot 1`] = `
<button
  className="button-aux"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonAux  disabled matches snapshots 1`] = `
<a
  className="button-aux"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxFull  "a" matches snapshots 1`] = `
<a
  className="button-aux button-aux--full"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxFull  "button" matches snapshot 1`] = `
<button
  className="button-aux button-aux--full"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonAuxFull  disabled matches snapshots 1`] = `
<a
  className="button-aux button-aux--full"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxMinor  "a" matches snapshots 1`] = `
<a
  className="button-aux button-aux--minor"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxMinor  "button" matches snapshot 1`] = `
<button
  className="button-aux button-aux--minor"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonAuxMinor  disabled matches snapshots 1`] = `
<a
  className="button-aux button-aux--minor"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxSecondary  "a" matches snapshots 1`] = `
<a
  className="button-aux button-aux--secondary"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonAuxSecondary  "button" matches snapshot 1`] = `
<button
  className="button-aux button-aux--secondary"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonAuxSecondary  disabled matches snapshots 1`] = `
<a
  className="button-aux button-aux--secondary"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonCTA  "a" matches snapshots 1`] = `
<a
  className="button button--cta"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonCTA  "button" matches snapshot 1`] = `
<button
  className="button button--cta"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonCTA  disabled matches snapshots 1`] = `
<a
  className="button button--cta"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonFull  "a" matches snapshots 1`] = `
<a
  className="button button--full"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonFull  "button" matches snapshot 1`] = `
<button
  className="button button--full"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonFull  disabled matches snapshots 1`] = `
<a
  className="button button--full"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlined  "a" matches snapshots 1`] = `
<a
  className="button-outlined"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlined  "button" matches snapshot 1`] = `
<button
  className="button-outlined"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonOutlined  disabled matches snapshots 1`] = `
<a
  className="button-outlined"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlinedFull  "a" matches snapshots 1`] = `
<a
  className="button-outlined button-outlined--full"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlinedFull  "button" matches snapshot 1`] = `
<button
  className="button-outlined button-outlined--full"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonOutlinedFull  disabled matches snapshots 1`] = `
<a
  className="button-outlined button-outlined--full"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlinedStatic  "a" matches snapshots 1`] = `
<a
  className="button-outlined button-outlined--static"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonOutlinedStatic  "button" matches snapshot 1`] = `
<button
  className="button-outlined button-outlined--static"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonOutlinedStatic  disabled matches snapshots 1`] = `
<a
  className="button-outlined button-outlined--static"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonStatic  "a" matches snapshots 1`] = `
<a
  className="button button--static"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`ButtonStatic  "button" matches snapshot 1`] = `
<button
  className="button button--static"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`ButtonStatic  disabled matches snapshots 1`] = `
<a
  className="button button--static"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`Unbutton  "a" matches snapshots 1`] = `
<a
  className="unbutton"
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;

exports[`Unbutton  "button" matches snapshot 1`] = `
<button
  className="unbutton"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</button>
`;

exports[`Unbutton  disabled matches snapshots 1`] = `
<a
  className="unbutton"
  disabled={true}
  href="#"
  onBlur={[Function bound _onBlur]}
  onClick={[Function bound _onClick]}
  onFocus={[Function bound _onFocus]}
  onMouseEnter={[Function bound _onMouseEnter]}
  onMouseLeave={[Function bound _onMouseLeave]}>
  Test button
</a>
`;
